--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -166,6 +166,7 @@
   --radius-2xl: calc(var(--radius) + 8px);
   --radius-3xl: calc(var(--radius) + 12px);
   --radius-4xl: calc(var(--radius) + 16px);
+  --background-image-hero: url('/assets/img/hero/bg.jpg');
 }
 
 @media (prefers-color-scheme: root) {
